# boost_numpy_wrapper

./: README.md  example.md
dlib/: CMakeLists.txt  dlib.cpp  video_tracker.py  video_tracking.cpp
piotr/: CMakeLists.txt  gradientMex.cpp  gradientMex_main.cpp  wrappers.hpp
piotr/cmake/: FindBoostNumPy.cmake
piotr/test/: gradientMex.py
